k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tn-economy-monitor
  labels:
    app: tn-economy-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tn-economy-monitor
  template:
    metadata:
      labels:
        app: tn-economy-monitor
    spec:
      containers:
        - name: app
          image: tnmonitor-bcdwa6ctajefhpfb.azurecr.io/tn-economy-monitor:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
