k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tn-economy-monitor
spec:
  type: LoadBalancer
  selector:
    app: tn-economy-monitor
  ports:
    - port: 80
      targetPort: 80
